plant uml
@startuml

' Define the background and styling
skinparam backgroundColor white
skinparam roundcorner 10
skinparam classFontSize 14
skinparam classFontName Arial
skinparam classAttributeFontSize 12
skinparam classAttributeFontName Arial
skinparam noteBackgroundColor #ffffcc
skinparam noteBorderColor #999999

' Title
title Gaming Platform Domain Model

' Sub-domains
package "User Management Sub-Domain" #ffcccc {
  class User {
    - username: string
    - email: string
    - password: string
    - walletBalance: double
    + loginAccount(): boolean
    + registerNewAccount(): void
    + addFunds(amount: double): void
    + purchaseGame(game: Game)
  }
  
  class "«Value Object»\nUserId" as useId {
    - uuid: UUID
  }
  
  class Admin {
    - username: string
    - password: string
    + DeleteGame(gameId): void
    + AddGame(Game()): void
    + manageUserAccounts(): void
  }
  
  class "«Value Object»\nAdminId" as AdminId {
    - uuid: UUID
  }
}

package "Game Management Sub-Domain" as GameD #ccccff {
  class Game {
    - title: string
    - price: double
    - releaseDate: Date
    - description: string
    - publisher: string
    - developer: string
    + getDetails(): string
    + updateInfo(id,title,genre): void
    + updatePrice(newPrice: double): void
  }
  
  class "«Value Object»\nGameId" as GameId {
    - uuid: UUID
  }
  
  enum "«Value Object»\nGenre" as Genre {
    ACTION
    ADVENTURE
    RPG
    STRATEGY
    SIMULATION
    SPORTS
    PUZZLE
    SHOOTER
    PLATFORMER
    HORROR
    RACING
    FIGHTING
  }
  
  class Review {
    - rating: int
    - comment: string
    - reviewDate: Date
    + submitReview(): void
  }
  
  class "«Value Object»\nReviewId" as ReviewId {
    - uuid: UUID
  }
}

package "Dashboard" as dash #ffccff {
  class Dashboard{
    - userId : String
    -balance: Double 
    -List<Downloads> downloads
    + List<Games> game
    + username : String
    + email: String
    
    +BuyGame(GameId : gameId)
    +StartDownload(DowloadId : downloadId)

  }
  class "«Value Object»\nUserId" as UserId {
    - uuid: UUID
  }
  

  
}

package "Download Management Sub-Domain" as Download #ccffcc {
  class DownloadManager {
    - downloadStatus: string
    + startDownload(): void
    + pauseDownload(): void
    + resumeDownload(): void
    + cancelDownload(): void
  }
  
  class "«Value Object»\nDownloadId" as DownloadId {
    - uuid: UUID
  }
}

' Business rules as notes
note bottom of Game : "where game.price > 0"

note left of User : "where user.walletBalance >= 0"
note bottom of Review : "where review.rating >= 1 and review.rating <= 5"

' Entity and ID relationships
User "1" -- "1" useId : "identified by"
Admin "1" -- "1" AdminId : "identified by"
Game "1" -- "1" GameId : "identified by"
Game "1" -- "1" Genre : "categorized as"
Review "1" -- "1" ReviewId : "identified by"


DownloadManager "1" -- "1" DownloadId : "identified by"

' Relationships between entities
Game "1" -- "*" Review : "has"



User "1" -- "1" Dashboard: "Takes data from"
GameD "*" -- "1" Dashboard: "Takes data from"
Download "*" -- "1" Dashboard: "Takes data from"
Download "*" -- "1" Dashboard: "Manages"
Admin "1" -- "*" User : "manages"


Dashboard "*" -- "1..*" UserId : "Identified By"


@enduml